<resources>
    <string name="app_name">Vittal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_visits">Visitas</string>
    <string name="menu_sales">Ventas</string>
    <string name="menu_queries">Consultas</string>
    <string name="menu_quotations">Cotizador</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="delete">Eliminar</string>
    <string name="edit">Editar</string>
    <string name="send">Enviar</string>
    <string name="select_all">Seleccionar todo</string>
    <string name="unselect_all">Anular selección</string>
    <string name="sales_rv_item_area_address_format">"%1$s • %2$s"</string>
    <string name="search">Buscar</string>
    <string name="undo">Deshacer</string>
    <string name="sale_modified">venta modificada</string>
    <string name="sale_saved">venta guardada</string>
    <string name="visit_modified">visita modificada</string>
    <string name="visit_saved">visita guardada</string>
    <string name="tab_title_applicant">Solicitante</string>
    <string name="tab_title_coverage">Cobertura</string>
    <string name="tab_title_modality">Modalidad</string>
    <string name="tab_title_payment">Formas de pago</string>
    <string name="tab_title_debt_collector">Cobrador</string>
    <string name="tab_title_seller">Vendedor</string>
    <string name="turn_into_sale">Convertir en venta</string>
    <string name="must_enter_user_password">Debe ingresar usuario y password</string>
    <string name="incorrect_user_password">Usuario o contraseña incorrectos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_razon_social">Razón Social</string>
    <string name="hint_fantasy_name">Nombre de Fantasia</string>
    <string name="hint_number_cuit">N° de CUIT</string>
    <string name="hint_address">Domicilio</string>
    <string name="hint_cp">Código Postal</string>
    <string name="hint_phones">Teléfonos</string>
    <string name="hint_cell_phone">Celular</string>
    <string name="hint_fax">Fax</string>
    <string name="email">Email</string>
    <string name="hint_number">Número</string>
    <string name="hint_floor">Piso</string>
    <string name="hint_dpto">Dpto</string>
    <string name="hint_street">Calle</string>
    <string name="hint_between_street">Entre calle</string>
    <string name="hint_and_street">y calle</string>
    <string name="hint_observations">Observaciones</string>
    <string name="hint_coseguro">Coseguro</string>
    <string name="hint_capitas_count">Cant. Cápitas</string>
    <string name="hint_aditional_per_excedent_help">Precio por auxilio excendente</string>
    <string name="hint_aditional_per_service_request">Adicional por solicitud de servicio</string>
    <string name="hint_hired_service_ammount">Cant. servicios contratados</string>
    <string name="hint_monthly_fee">Abono mensual</string>
    <string name="protected_area">Área Protegida</string>
    <string name="convenio_capitado">Convenio Capitado</string>
    <string name="servicio_topado">Servicio Topado</string>
    <string name="hint_others">Otros</string>
    <string name="emergencies">Emergencias y Urgencias</string>
    <string name="home_health_consultation">Consulta médica domiciliaria</string>
    <string name="hint_discribe_modality">Si selecciona Otros - Especifique otra modalidad</string>
    <string name="hint_letter">Letra</string>
    <string name="hint_days">Días</string>
    <string name="hint_date">Fecha</string>
    <string name="hint_branch">Sucursal</string>
    <string name="hint_owner_name">Nombre del titular</string>
    <string name="hint_card_number">N° de tarjeta</string>
    <string name="hint_cbu">CBU</string>
    <string name="hint_expire_date">Vencimiento</string>
    <string name="hint_dni">DNI</string>
    <string name="hint_cuit_number">N° de CUIT</string>
    <string name="hint_cupon_number">N° de cupón</string>
    <string name="hint_between_payment_ammount">Cantidad de pagos</string>
    <string name="hint_early_month">Mes adelantado</string>
    <string name="hint_overdue_month">Mes Vencido</string>
    <string name="hint_between_bill_to">Cobrar a</string>
    <string name="title_condition_vs_iva">Condición frente al IVA</string>
    <string name="title_delivered_documents">Documentos entregados</string>
    <string name="hint_if_selected_other_documents">Si selecciona Otros, especifique el documento</string>
    <string name="title_exempt">Exento</string>
    <string name="title_cf">CF</string>
    <string name="hint_ri">RI</string>
    <string name="hint_mt">MT</string>
    <string name="hint_10_5">10.5%</string>
    <string name="hint_cuit">CUIT</string>
    <string name="hint_iibb">IIBB</string>
    <string name="hint_iibb_amount">Importe de IIBB</string>
    <string name="hint_fee_without_iva">Importe de cuota mensula s/IVA</string>
    <string name="hint_capita">Cápita</string>
    <string name="sticker_delivered">Se entregó sticker</string>
    <string name="are_you_sure_close_whitout_save">¿Desea salir sin guardar los cambios?</string>
    <string name="vittal">Vittal</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="incomplete_form">Formulario incompleto</string>
</resources>
