<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/fr_check_form_spn_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_margin_bottom"
        ></Spinner>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_owner_name"
        android:layout_marginBottom="@dimen/form_margin_bottom"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_branch"
        android:layout_marginBottom="@dimen/form_margin_bottom"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_card_number"
        android:layout_marginBottom="@dimen/form_margin_bottom"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cbu"
        android:layout_marginBottom="@dimen/form_margin_bottom"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_expire_date"
        android:layout_marginBottom="@dimen/form_margin_bottom"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_dni"
        android:layout_marginBottom="@dimen/form_margin_bottom"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cuit_number"
        android:layout_marginBottom="@dimen/form_margin_bottom"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cupon_number"
        android:layout_marginBottom="@dimen/form_margin_bottom"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_between_payment_ammount"
        android:layout_marginBottom="@dimen/form_margin_bottom"/>

</LinearLayout>