<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="com.prominente.android.vittal.fragments.ModalityFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/modality_types"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_discribe_modality"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/emergencies" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/home_health_consultation" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_monthly_fee"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hired_service_ammount"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_aditional_per_service_request"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_capitas_count"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_coseguro"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_aditional_per_excedent_help"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="4"
            android:hint="@string/hint_observations"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>


    </LinearLayout>

</ScrollView>