<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_sales_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_sales_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/edit"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_sales_send"
        android:icon="@drawable/ic_send_white_24dp"
        android:title="@string/send"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_select_unselect_all"
        android:icon="@drawable/ic_check_box_white_24dp"
        android:title="@string/select_all"
        app:showAsAction="never" />

</menu>