<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.prominente.android.vittal.fragments.ApplicantFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/fr_applicant_form_spn_protected_area_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/form_margin_bottom"
            ></Spinner>

        <Button
            android:id="@+id/fr_applicant_form_btn_pick_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="dd/mm/aaaa"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_razon_social"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fantasy_name"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_number_cuit"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cp"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phones"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cell_phones"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fax"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>

    </LinearLayout>

</ScrollView>
