<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_delivered_documents"
        android:layout_marginBottom="@dimen/form_margin_bottom"
        style="@style/form_subsection_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/form_margin_bottom">

        <RadioButton
            android:id="@+id/partial_delivered_documents_cuit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_cuit" />

        <RadioButton
            android:id="@+id/partial_delivered_documents_iibb"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_iibb" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/form_margin_bottom">

        <RadioButton
            android:id="@+id/partial_delivered_documents_dni"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_dni" />

        <RadioButton
            android:id="@+id/partial_delivered_documents_others"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_others" />

    </LinearLayout>

</LinearLayout>