<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="coverageForm" type="com.prominente.android.vittal.model.CoverageForm"/>
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:context="com.prominente.android.vittal.fragments.CoverageFormFragment">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/fr_coverage_form_spn_protected_area_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectedValue="@={coverageForm.protectedArea}"
            android:layout_marginBottom="@dimen/form_margin_bottom"
            />


        <EditText
            android:id="@+id/fr_coverage_form_et_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_street"
            android:text="@={coverageForm.street}"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fr_coverage_form_et_number"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:hint="@string/hint_number"
                android:text="@={coverageForm.number}"
                android:layout_marginBottom="@dimen/form_margin_bottom"/>

            <EditText
                android:id="@+id/fr_coverage_form_et_floor"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:hint="@string/hint_floor"
                android:text="@={coverageForm.floor}"
                android:layout_marginBottom="@dimen/form_margin_bottom"/>

            <EditText
                android:id="@+id/fr_coverage_form_et_dpto"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:hint="@string/hint_dpto"
                android:text="@={coverageForm.dpto}"
                android:layout_marginBottom="@dimen/form_margin_bottom"/>

        </LinearLayout>

        <EditText
            android:id="@+id/fr_coverage_form_et_between_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_between_street"
            android:text="@={coverageForm.entreCalle}"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>


        <EditText
            android:id="@+id/fr_coverage_form_et_and_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_and_street"
            android:text="@={coverageForm.andStreet}"
            android:layout_marginBottom="@dimen/form_margin_bottom"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/fr_coverage_form_spn_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectedValue="@={coverageForm.location}"
            android:layout_marginBottom="@dimen/form_margin_bottom"
            />

    </LinearLayout>

    </ScrollView>

</layout>